@@ -34,7 +34,7 @@ class DataPlot : public QWidget
         DataPlot(QWidget* parent, DataView* dataView, const char* name = 0) throw ();
         virtual ~DataPlot();
         
-        void updateData(bool forceRedraw) throw ();
+        void updateData(bool forceRedraw, bool forceRecalculatePositions = false) throw ();
         
         void setZoomFactor(double factor) throw ();
         double getZoomFactor() const throw ();
