@@ -34,7 +34,7 @@ using std::max;
 // -------------------------------------------------------------------------------------------------
 DataView::DataView(QWidget* parent, const char* name)
     throw ()
-    : QWidget(parent, name)
+    : QWidget(parent, name), m_scrollDivisor(1)
 {
     QVBoxLayout* layout = new QVBoxLayout(this, 0);
     m_dataPlot = new DataPlot(this, this);
@@ -48,10 +48,26 @@ DataView::DataView(QWidget* parent, const char* name)
             this,                    SIGNAL(leftMarkerValueChanged(double)));
     connect(m_dataPlot,              SIGNAL(rightMarkerValueChanged(double)), 
             this,                    SIGNAL(rightMarkerValueChanged(double)));
-    
-    connect(m_dataPlot, SIGNAL(viewUpdated()), SLOT(updateScrollInfo()));
-    connect(m_scrollBar, SIGNAL(valueChanged(int)), SLOT(scrollValueChanged(int)));
-    
+    connect(m_scrollBar,             SIGNAL(nextLine()),
+            this,                    SLOT(navigateRight()));
+    connect(m_scrollBar,             SIGNAL(prevLine()),
+            this,                    SLOT(navigateLeft()));
+    connect(m_scrollBar,             SIGNAL(sliderReleased()),
+            this,                    SLOT(scrollValueChanged()));
+    connect(m_scrollBar,             SIGNAL(nextPage()),
+            this,                    SLOT(navigateRightPage()));
+    connect(m_scrollBar,             SIGNAL(prevPage()),
+            this,                    SLOT(navigateLeftPage()));
+    connect(m_dataPlot,              SIGNAL(viewUpdated()),
+            this,                    SLOT(updateScrollInfo()));
+            
+    // don't use this because of two reasons
+    //  - if zoom is high, the user may not see all 
+    //  - if zoom is low, it's slow
+    //connect(m_scrollBar,             SIGNAL(sliderMoved(int)),
+    //        this,                    SLOT(scrollValueChanged(int)));
+    //connect(m_scrollBar,             SIGNAL(sliderPressed()),
+    //        this,                    SLOT(scrollValueChanged()));
 }
 
 
@@ -59,9 +75,21 @@ DataView::DataView(QWidget* parent, const char* name)
 void DataView::setData(const Data& data)
     throw ()
 {
+    // QScrollBar has a bug with very large values and large display width so that the
+    // slider becomes too small (should be 90 %, is 5 %)
+    // tested with values
+    //   bar->setGeometry(0, 500, 500, 500);
+    //   bar->setRange(0, 1727);
+    //   bar->setPageStep(2962973);
+    // to solve this, we connect to the pagestep / linestep signals directly and use a smaller
+    // pagestep and range value here
+    m_scrollDivisor =  m_currentData.bytes().size()  == 0
+                       ? 1
+                       : m_currentData.bytes().size() / 1000;
+                       
     m_currentData = data;
     m_dataPlot->setStartIndex(0);
-    m_dataPlot->updateData(true);
+    m_dataPlot->updateData(true, true);
     m_dataPlot->clearMarkers();
 }
 
@@ -70,7 +98,10 @@ void DataView::setData(const Data& data)
 void DataView::zoomIn()
     throw ()
 {
-    m_dataPlot->setZoomFactor(m_dataPlot->getZoomFactor() * 2.0);
+    if (m_dataPlot->getNumberOfDisplayedSamples() > 5)
+    {
+        m_dataPlot->setZoomFactor(m_dataPlot->getZoomFactor() * 2.0);
+    }
 }
 
 
@@ -88,8 +119,8 @@ void DataView::zoomFit()
 {
     if (m_currentData.bytes().size() != 0)
     {
-        m_dataPlot->setZoomFactor( static_cast<double>(m_dataPlot->getCurrentWidthForPlot()) / 
-                              (m_dataPlot->getPointsPerSample() * m_currentData.bytes().size()) );
+        m_dataPlot->setZoomFactor( static_cast<double>(m_dataPlot->getCurrentWidthForPlot() - 1) / 
+                              m_dataPlot->getPointsPerSample() / m_currentData.bytes().size() );
     }
 }
 
@@ -106,7 +137,6 @@ void DataView::zoom1()
 void DataView::pos1() throw ()
 {
     m_dataPlot->setStartIndex(0);
-    m_scrollBar->setValue(m_dataPlot->getStartIndex());
 }
 
 
@@ -116,8 +146,7 @@ void DataView::end() throw ()
     if (m_currentData.bytes().size() > 0)
     {
         m_dataPlot->setStartIndex(m_currentData.bytes().size() - 
-                                  m_dataPlot->getNumberOfDisplayedSamples());
-        m_scrollBar->setValue(m_dataPlot->getStartIndex());
+                                  m_dataPlot->getNumberOfDisplayedSamples() + 2);
     }
 }
 
@@ -145,7 +174,11 @@ void DataView::updateScrollInfo()
 {
     int ps = m_dataPlot->getNumberOfDisplayedSamples();
     
-    m_scrollBar->setRange(0, m_currentData.bytes().size() - ps);
+    m_scrollBar->setRange(0, (m_currentData.bytes().size() - ps) / m_scrollDivisor);
+    m_scrollBar->setValue(m_dataPlot->getStartIndex() / m_scrollDivisor);
+    
+    qDebug("val = %d", m_scrollBar->value());
+    qDebug("max = %d", m_scrollBar->maxValue());
     
     // set this to calculate the size
     if ((m_currentData.bytes().size() - ps) == 0)
@@ -154,8 +187,8 @@ void DataView::updateScrollInfo()
     }
     else
     {
-        m_scrollBar->setPageStep(ps);
-        m_scrollBar->setLineStep(qRound(ps / 10.0));
+        m_scrollBar->setPageStep(ps / m_scrollDivisor);
+        m_scrollBar->setLineStep(qRound(ps / 10.0 / m_scrollDivisor)); 
     }
 }
 
@@ -169,24 +202,59 @@ void DataView::redrawData()
 
 
 // -------------------------------------------------------------------------------------------------
-void DataView::scrollValueChanged(int value)
+void DataView::scrollValueChanged()
     throw ()
 {
-    m_dataPlot->setStartIndex(value);
+    scrollValueChanged(m_scrollBar->value());
+}
+
+
+// -------------------------------------------------------------------------------------------------
+void DataView::scrollValueChanged(int value) throw ()
+{
+    qDebug("value = %d", value);
+    if (value == m_scrollBar->maxValue())
+    {
+        end();
+    }
+    else
+    {
+        m_dataPlot->setStartIndex(value * m_scrollDivisor);
+    }
 }
 
 
 // -------------------------------------------------------------------------------------------------
 void DataView::navigateLeft() throw ()
 {
-    m_scrollBar->subtractPage();
+    m_dataPlot->setStartIndex(  max(0,   m_dataPlot->getStartIndex() -
+                                        qRound(m_dataPlot->getNumberOfDisplayedSamples() / 10.0)) );
 }
 
 
 // -------------------------------------------------------------------------------------------------
 void DataView::navigateRight() throw ()
 {
-    m_scrollBar->addPage();
+    m_dataPlot->setStartIndex(  min(  m_dataPlot->getStartIndex() +
+                                         qRound(m_dataPlot->getNumberOfDisplayedSamples() / 10.0),
+                                      static_cast<int>(m_currentData.bytes().size())) );
+}
+
+
+// -------------------------------------------------------------------------------------------------
+void DataView::navigateLeftPage() throw ()
+{
+    m_dataPlot->setStartIndex(  max(0,   m_dataPlot->getStartIndex() -
+                                        qRound(m_dataPlot->getNumberOfDisplayedSamples())) );
+}
+
+
+// -------------------------------------------------------------------------------------------------
+void DataView::navigateRightPage() throw ()
+{
+    m_dataPlot->setStartIndex(  min(  m_dataPlot->getStartIndex() +
+                                         qRound(m_dataPlot->getNumberOfDisplayedSamples()),
+                                      static_cast<int>(m_currentData.bytes().size())) );
 }
 
 
@@ -195,7 +263,7 @@ void DataView::jumpToLeftMarker() throw ()
 {
     if (m_dataPlot->getLeftMarker() >= 0)
     {
-        m_scrollBar->setValue( m_dataPlot->getLeftMarker() - m_scrollBar->pageStep() / 2);
+        m_dataPlot->setStartIndex(max(0, m_dataPlot->getLeftMarker()));
     }
 }
 
@@ -205,7 +273,9 @@ void DataView::jumpToRightMarker() throw ()
 {
     if (m_dataPlot->getRightMarker() >= 0)
     {
-        m_scrollBar->setValue( m_dataPlot->getRightMarker() - m_scrollBar->pageStep() / 2 );
+        // 3 instead of 2 because in end() size() is lastElementIndex + 1
+        m_dataPlot->setStartIndex(max(0, m_dataPlot->getRightMarker() -
+                                       m_dataPlot->getNumberOfDisplayedSamples() + 3)  );
     }
 }
 
