@@ -37,6 +37,7 @@ class ParameterBox : public QFrame
     protected slots:
         void timeValueChanged(const QTime& time) throw (); 
         void triggerValueChanged(byte mask, byte value) throw ();
+        void sliderValueChanged(int newValue) throw ();
         void updateValues() throw ();
         
     private:
